* Development (v4.1)
** Ledger-mode now requires Emacs 25 or later
** ledger-add-transaction now uses org-read-date
This is more consistent with the behavior of =ledger-copy-transaction-at-point=
and =ledger-insert-effective-date=. In order to disable the pop-up calendar, bind
=org-read-date-popup-calendar= to nil. The command now prompts twice - once for
the date and another time for the xact text. If you find this annoying, set
=ledger-add-transaction-prompt-for-text= to nil.
** New minor mode ledger-reconcile-display-balance-in-header-mode
In reconcile buffers, =ledger-reconcile-display-balance-in-header-mode= (bound
to =B= by default) causes the most recent balance and target diff to be
persistently displayed in the header line.
** New commands ledger-date-up and ledger-date-down
These two commands are bound to Shift-<up>/<down> respectively and change the
date field at point in the same way as org-timestamp-change does.
** New command ledger-rename-account
This command renames all occurrences of an account name in the buffer.
** New command ledger-post-fill
This command finds a posting with a missing amount and inserts the correct
amount that would balance the transaction.
** New option ledger-report-links-beginning-of-xact
This option defaults to t.  When nil, links in the report buffer visit the
specific posting at point, rather than the beginning of the transaction
containing that posting.
** Removed unused ledger-occur-narrowed-face
This face was not actually used to mark up narrowed text, which is instead
hidden by using overlays.
* Release v4.0.0
** The completion system now respects whatever completion system the user prefers
Some users prefer different completion systems such as ivy or helm. To get the
old behavior back, see the instructions in the ledger manual under the heading
"Adding Transactions."

Additionally, we now realign transactions after completion, see
ledger-post-auto-align.