@@ -15,17 +15,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        emacs_version: [25.1, 25.2, 25.3, 26.1, 26.2, 26.3, 27.1, 27.2, 28.1, 28.2, 29.1, 29.3, 30.1, snapshot]
+        emacs_version: [26.1, 26.2, 26.3, 27.1, 27.2, 28.1, 28.2, 29.1, 29.3, 30.1, snapshot]
         experimental: [false]
 
         # Exclude Emacs versions that are unavailable on Apple Silicon
         exclude:
-          - emacs_version: 25.1
-            os: macos-latest
-          - emacs_version: 25.2
-            os: macos-latest
-          - emacs_version: 25.3
-            os: macos-latest
           - emacs_version: 26.1
             os: macos-latest
           - emacs_version: 26.2
@@ -53,10 +47,8 @@ jobs:
         version: ${{ matrix.emacs_version }}
 
     - uses: actions/checkout@v4
-    # Byte compilation is known to fail in Emacs < 26.1 due to ledger-flymake.el, which should
-    # be packaged separately
     - name: Byte compilation
-      run: emacs --eval "(setq byte-compile-error-on-warn (>= emacs-major-version 26))" -L . --batch -f batch-byte-compile ./*.el
+      run: emacs --eval "(setq byte-compile-error-on-warn t)" -L . --batch -f batch-byte-compile ./*.el
     - name: Tests
       run: nix shell 'nixpkgs#getopt' ${{ matrix.ledger_version || 'nixpkgs#ledger' }} --print-build-logs -c ./makem.sh test -vv
     # This is currently for information only, since a lot of docstrings need fixing up
